--- a/media/locales/cs/seafile-editor.json
+++ b/media/locales/cs/seafile-editor.json
@@ -14,6 +14,7 @@
   "unordered_list": "Nečíslovaný seznam",
   "check_list_item": "Zkontrolovat položku seznamu",
   "insert_image": "Vložit obrázek",
+  "insert_file": "Insert File",
   "code": "Řádkový kód",
   "code_block": "Blok kódu",
   "insert_link": "Vložit odkaz",
@@ -32,6 +33,14 @@
   "remove_table": "Odebrat tabulku",
   "column": "Sloupec",
   "row": "Řádek",
+  "Insert_Row_Before": "Insert Row Before",
+  "Insert_Row_After": "Insert Row After",
+  "Insert_Column_Before": "Insert Column Before",
+  "Insert_Column_After": "Insert Column After",
+  "Remove_Row": "Remove Row",
+  "Remove_Column": "Remove Column",
+  "Insert_Row": "Insert Row",
+  "Insert_Column": "Insert Column",
   "set_align": "Nastavit zarovnání",
   "left": "Vlevo",
   "center": "Střed",
@@ -88,7 +97,7 @@
   "comments": "Komentáře",
   "add_a_comment": "Přidat komentář…",
   "no_comment_yet": "Žádné komentáře",
-  "mark_as_resolved": "Označit jako vyřešené",
+  "Mark_as_Resolved": "Mark as Resolved",
   "ask_for_review": "Požádat o kontrolu",
   "review_already_exists": "Kontrola již existuje. ",
   "view_review": "Zobrazit kontrolu",
@@ -101,18 +110,41 @@
   "related_files": "související soubory",
   "related_file": "související soubor",
   "no_tags": "Žádné značky",
+  "Date": "Datum",
+  "Participants": "Participants",
+  "Meeting_note": "Meeting note",
+  "Chooser_document_type": "Chooser document type",
+  "Empty": "Prázdný",
   "no_related_files": "Žádné související soubory",
   "no_out_line": "Bez obrysu",
-  "Please_use_Chrome_to_get_best_editing_experience": "Prosím použijte Chrome pro lepší možnosti editace.",
+  "Editing_files_in_this_browser_can_lead_to_slight_display_problems": "Editing files in this browser can lead to slight display problems.",
   "no_document_improvement_suggestion": "Žádný návrh na zlepšení dokumentu",
+  "Hide_side_panel": "Hide side panel",
+  "Show_side_panel": "Show side panel",
+  "Show_resolved_comments": "Zobrazit vyřešené komentáře",
+  "Update": "Aktualizovat",
+  "Width": "Width",
+  "Height": "Height",
+  "Full_screen": "Full screen",
+  "Insert_library_image": "Insert library image",
+  "Size": "Velikost",
+  "Location": "Umístění",
+  "Last_Update": "Poslední aktualizace",
+  "Tags": "Štítky",
+  "Related_Files": "Související soubory",
+  "Add_participants": "Add participants",
   "markdownLint": {
     "missing_h1": {
       "description": "V dokumentu není žádný h1",
       "issue" : "Chybí h1"
     },
     "heading_end_with_colon": {
-      "description": "Koncová interpunkce v záhlaví by neměla být dvojtečka.",
+      "description": "Trailing punctuation in heading should not be a colon",
       "issue": "Záhlaví končí dvojtečkou"
+    },
+    "heading_increase_irregular": {
+      "description": "Heading levels should only increment by one level at a time",
+      "issue": "Heading level issue"
     }
   },
   "userHelp": {
