--- a/media/locales/de/seafile-editor.json
+++ b/media/locales/de/seafile-editor.json
@@ -14,6 +14,7 @@
   "unordered_list": "Ungeordnete Liste",
   "check_list_item": "Checkbox Liste",
   "insert_image": "Bild",
+  "insert_file": "Insert File",
   "code": "Inline-Code",
   "code_block": "Codeblock",
   "insert_link": "Link",
@@ -32,6 +33,14 @@
   "remove_table": "Tabelle entfernen",
   "column": "Spalte",
   "row": "Zeile",
+  "Insert_Row_Before": "Insert Row Before",
+  "Insert_Row_After": "Insert Row After",
+  "Insert_Column_Before": "Insert Column Before",
+  "Insert_Column_After": "Insert Column After",
+  "Remove_Row": "Remove Row",
+  "Remove_Column": "Remove Column",
+  "Insert_Row": "Insert Row",
+  "Insert_Column": "Insert Column",
   "set_align": "Ausrichtung festlegen",
   "left": "Links",
   "center": "Zentrieren",
@@ -48,7 +57,7 @@
   "copy_internal_link": "Der interne Link wurde in den Zwischenspeicher kopiert.",
   "internal_link_desc": "Interne Links sind Verweise auf Dateien bzw. Ordner, die nur von Benutzer/innen mit mindestens Leserechten für die Dateien bzw. Ordner genutzt werden können. Interne Links eignen sich insbesondere für die interne Kommunikation in Ticket-/CRM-Systemen sowie E-Mails und Chats.",
   "share": "Freigeben",
-  "share_link": "Link freigeben",
+  "share_link": "Download-Link",
   "generate": "Erstellen",
   "add_password_protection": "Passwort hinzufügen",
   "password": "Passwort",
@@ -88,7 +97,7 @@
   "comments": "Kommentare",
   "add_a_comment": "Kommentar einfügen",
   "no_comment_yet": "Keine Kommentare vorhanden",
-  "mark_as_resolved": "Als erledigt markieren",
+  "Mark_as_Resolved": "Mark as Resolved",
   "ask_for_review": "Um ein Review bitten",
   "review_already_exists": "Es gibt bereits ein Review.",
   "view_review": "Review anzeigen",
@@ -101,18 +110,41 @@
   "related_files": "Zugehörige Dateien",
   "related_file": "Zugehörige Datei",
   "no_tags": "Keine Tags",
+  "Date": "Datum",
+  "Participants": "Teilnehmer",
+  "Meeting_note": "Meeting note",
+  "Chooser_document_type": "Chooser document type",
+  "Empty": "Leer",
   "no_related_files": "Keine zugehörigen Dateien",
   "no_out_line": "Keine Gliederung",
-  "Please_use_Chrome_to_get_best_editing_experience": "Die Bearbeitungsfunktion ist für den Chrome-Browser optimiert.",
+  "Editing_files_in_this_browser_can_lead_to_slight_display_problems": "Editing files in this browser can lead to slight display problems.",
   "no_document_improvement_suggestion": "Keine Vorschläge zur Verbesserung des Dokuments",
+  "Hide_side_panel": "Hide side panel",
+  "Show_side_panel": "Show side panel",
+  "Show_resolved_comments": "Erledigte Kommentare anzeigen",
+  "Update": "Aktualisieren",
+  "Width": "Width",
+  "Height": "Height",
+  "Full_screen": "Full screen",
+  "Insert_library_image": "Insert library image",
+  "Size": "Größe",
+  "Location": "Ort",
+  "Last_Update": "Letzte Änderung",
+  "Tags": "Tags",
+  "Related_Files": "Zugehörige Dateien",
+  "Add_participants": "Teilnehmer hinzufügen",
   "markdownLint": {
     "missing_h1": {
       "description": "Es gibt keine Hauptüberschrift (h1) in dem Text",
       "issue" : "Hauptüberschrift (h1) fehlt"
     },
     "heading_end_with_colon": {
-      "description": "Überschriften dürfen nicht mit einem Doppelpunkt enden.",
+      "description": "Trailing punctuation in heading should not be a colon",
       "issue": "Überschrift endet mit einem Doppelpunkt"
+    },
+    "heading_increase_irregular": {
+      "description": "Heading levels should only increment by one level at a time",
+      "issue": "Heading level issue"
     }
   },
   "userHelp": {
