--- a/media/locales/es/seafile-editor.json
+++ b/media/locales/es/seafile-editor.json
@@ -14,6 +14,7 @@
   "unordered_list": "Lista Desordenada",
   "check_list_item": "Check List Item",
   "insert_image": "Insertar Imagen",
+  "insert_file": "Insert File",
   "code": "Inline Code",
   "code_block": "Bloque de Código",
   "insert_link": "Insertar Enlace",
@@ -32,6 +33,14 @@
   "remove_table": "Eliminar tabla",
   "column": "Columna",
   "row": "Fila",
+  "Insert_Row_Before": "Insert Row Before",
+  "Insert_Row_After": "Insert Row After",
+  "Insert_Column_Before": "Insert Column Before",
+  "Insert_Column_After": "Insert Column After",
+  "Remove_Row": "Remove Row",
+  "Remove_Column": "Remove Column",
+  "Insert_Row": "Insert Row",
+  "Insert_Column": "Insert Column",
   "set_align": "Establecer alineación",
   "left": "Izquierda",
   "center": "Centrar",
@@ -88,7 +97,7 @@
   "comments": "Comentarios",
   "add_a_comment": "Agregar un comentario...",
   "no_comment_yet": "No hay comentarios.",
-  "mark_as_resolved": "Marcar como resuelto",
+  "Mark_as_Resolved": "Mark as Resolved",
   "ask_for_review": "Solicitar revisión",
   "review_already_exists": "La revisión ya existe",
   "view_review": "Ver revisión",
@@ -101,18 +110,41 @@
   "related_files": "archivos relacionados",
   "related_file": "archivo relacionado",
   "no_tags": "Sin etiquetas",
+  "Date": "Fecha",
+  "Participants": "Participantes",
+  "Meeting_note": "Meeting note",
+  "Chooser_document_type": "Chooser document type",
+  "Empty": "Vacío",
   "no_related_files": "Sin archivos relacionados",
   "no_out_line": "No hay esquema",
-  "Please_use_Chrome_to_get_best_editing_experience": "Por favor utilice Chrome para obtener la mejor experiencia editando.",
+  "Editing_files_in_this_browser_can_lead_to_slight_display_problems": "Editing files in this browser can lead to slight display problems.",
   "no_document_improvement_suggestion": "No hay sugerencias para mejorar el documento",
+  "Hide_side_panel": "Hide side panel",
+  "Show_side_panel": "Show side panel",
+  "Show_resolved_comments": "Mostrar comentarios resueltos",
+  "Update": "Actualizar",
+  "Width": "Width",
+  "Height": "Height",
+  "Full_screen": "Full screen",
+  "Insert_library_image": "Insert library image",
+  "Size": "Tamaño",
+  "Location": "Ubicación",
+  "Last_Update": "Última actualización",
+  "Tags": "Rótulos",
+  "Related_Files": "Archivos Relacionados",
+  "Add_participants": "Agregar participantes",
   "markdownLint": {
     "missing_h1": {
       "description": "No hay h1 en el documento",
       "issue" : "Falta h1"
     },
     "heading_end_with_colon": {
-      "description": "Un encabezado no debe finalizar con el signo Dos Puntos.",
+      "description": "Trailing punctuation in heading should not be a colon",
       "issue": "El encabezado finaliza con el signo Dos Puntos"
+    },
+    "heading_increase_irregular": {
+      "description": "Heading levels should only increment by one level at a time",
+      "issue": "Heading level issue"
     }
   },
   "userHelp": {
