--- a/media/locales/it/seafile-editor.json
+++ b/media/locales/it/seafile-editor.json
@@ -14,6 +14,7 @@
   "unordered_list": "Lista non ordinata",
   "check_list_item": "Controlla la voce dell'elenco",
   "insert_image": "Inserisci Immagine",
+  "insert_file": "Insert File",
   "code": "Codice in linea",
   "code_block": "Codice",
   "insert_link": "Inserisci Collegamento",
@@ -32,6 +33,14 @@
   "remove_table": "Rimuovere Tabella",
   "column": "Colonna",
   "row": "Riga",
+  "Insert_Row_Before": "Insert Row Before",
+  "Insert_Row_After": "Insert Row After",
+  "Insert_Column_Before": "Insert Column Before",
+  "Insert_Column_After": "Insert Column After",
+  "Remove_Row": "Remove Row",
+  "Remove_Column": "Remove Column",
+  "Insert_Row": "Insert Row",
+  "Insert_Column": "Insert Column",
   "set_align": "Imposta allineamento",
   "left": "Sinistra",
   "center": "Centrato",
@@ -41,7 +50,7 @@
   "star": "Aggiungi asterisco",
   "unstar": "Rimozione asterisco",
   "back_to_parent_directory":"Torna alla cartella precedente",
-  "edit":"modifica",
+  "edit": "Modifica",
   "copy": "Copia",
   "copied": "Copiato",
   "internal_link": "Collegamento interno",
@@ -60,7 +69,7 @@
   "greater_than_or_equal_to": "Maggiore o uguale a ",
   "less_than_or_equal_to": "Minore o uguale  a",
   "set_permission": "Imposta permessi",
-  "preview_and_download": "Anteprima e download",
+  "preview_and_download": "Anteprima e scarica",
   "preview_only": "Solo Anteprima",
   "please_enter_valid_days": "Si prega di inserire giorni validi",
   "please_enter_a_non-negative_integer": "Prego inserire un intero non negativo",
@@ -81,13 +90,14 @@
   "you_have_an_unsaved_draft_do_you_like_to_use_it": "Hai una bozza non salvata. La vuoi utilizzare?",
   "local_draft_saved": "Bozza salvata in locale",
   "new_draft": "Nuova Bozza",
-  "edit_draft": "Modifica Bozza",
+  "view_draft": "View Draft",
+  "publish": "Pubblica",
   "this_file_has_a_draft": "Questo file è una bozza", 
   "delete": "Elimina",
   "comments": "Commenti",
   "add_a_comment": "Aggiungi un commento...",
   "no_comment_yet": "Ancora nessun commento.",
-  "Mark_as_Resolved": "Contrassegnato come risolto",
+  "Mark_as_Resolved": "Mark as Resolved",
   "ask_for_review": "Richiedi una revisione",
   "review_already_exists": "Revisione già esistente",
   "view_review": "Visualizza revisione",
@@ -100,8 +110,43 @@
   "related_files": "file correlati",
   "related_file": "file correlato",
   "no_tags": "Nessun tag",
+  "Date": "Data",
+  "Participants": "Participants",
+  "Meeting_note": "Meeting note",
+  "Chooser_document_type": "Chooser document type",
+  "Empty": "Vuoto",
   "no_related_files": "Nessun file correlato",
-  "Editing_files_in_this_browser_can_lead_to_slight_display_problems": "",
+  "no_out_line": "No outline",
+  "Editing_files_in_this_browser_can_lead_to_slight_display_problems": "Editing files in this browser can lead to slight display problems.",
+  "no_document_improvement_suggestion": "No document improvement suggestion",
+  "Hide_side_panel": "Hide side panel",
+  "Show_side_panel": "Show side panel",
+  "Show_resolved_comments": "Mostra commenti risolti",
+  "Update": "Aggiorna",
+  "Width": "Width",
+  "Height": "Height",
+  "Full_screen": "Full screen",
+  "Insert_library_image": "Insert library image",
+  "Size": "Dimensione",
+  "Location": "Posizione",
+  "Last_Update": "Ultimo aggiornamento",
+  "Tags": "Tag",
+  "Related_Files": "File correlati",
+  "Add_participants": "Add participants",
+  "markdownLint": {
+    "missing_h1": {
+      "description": "There is no h1 in the document",
+      "issue" : "Missing h1"
+    },
+    "heading_end_with_colon": {
+      "description": "Trailing punctuation in heading should not be a colon",
+      "issue": "Heading ends width colon"
+    },
+    "heading_increase_irregular": {
+      "description": "Heading levels should only increment by one level at a time",
+      "issue": "Heading level issue"
+    }
+  },
   "userHelp": {
     "title": "Tasti rapidi",
     "userHelpData": [
