--- a/locale/de/LC_MESSAGES/djangojs.po
+++ b/locale/de/LC_MESSAGES/djangojs.po
@@ -24,8 +24,8 @@ msgstr ""
 "Project-Id-Version: seahub\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-03-26 10:14+0800\n"
-"PO-Revision-Date: 2020-03-26 02:18+0000\n"
-"Last-Translator: imwhatiam <imwhatiam123@gmail.com>\n"
+"PO-Revision-Date: 2020-03-26 07:20+0000\n"
+"Last-Translator: Andreas Vollmer | HU Berlin <andreas.vollmer@cms.hu-berlin.de>\n"
 "Language-Team: German (http://www.transifex.com/haiwen/seahub/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1284,7 +1284,7 @@ msgstr "Interner Link"
 msgid ""
 "An internal link is a link to a file or folder that can be accessed by users"
 " with read permission to the file or folder."
-msgstr "Interne Links sind Verweise auf Dateien oder Ordner, die nur von Nutzer/innen mit mindestens Leserechten für die Dateien bzw. Ordner genutzt werden können. Interne Links eignen sich insbesondere für die interne Kommunikation in Ticket-/CRM-Systemen sowie E-Mails und Chats."
+msgstr "Interne Links sind Verweise auf Dateien oder Ordner, die nur von Benutzer/innen mit mindestens Leserechten für die Dateien bzw. Ordner genutzt werden können. Interne Links eignen sich insbesondere für die interne Kommunikation in Ticket-/CRM-Systemen sowie E-Mails und Chats."
 
 #: frontend/src/components/dialog/internal-link-dialog.js:77
 #: frontend/src/components/dialog/internal-link.js:59
@@ -1997,11 +1997,11 @@ msgstr "Speichern unter:"
 
 #: frontend/src/components/dialog/set-org-user-contact-email.js:57
 msgid "Set user contact email"
-msgstr "E-Mail-Adresse für Nutzer/in setzen"
+msgstr "E-Mail-Adresse für Benutzer/in setzen"
 
 #: frontend/src/components/dialog/set-org-user-name.js:59
 msgid "Set user name"
-msgstr "Name für Nutzer/in setzen"
+msgstr "Name für Benutzer/in setzen"
 
 #: frontend/src/components/dialog/set-org-user-quota.js:65
 msgid "Set user quota"
@@ -2913,7 +2913,7 @@ msgstr "Speichern unter …"
 #: frontend/src/pages/org-admin/org-logs-file-update.js:204
 #: frontend/src/pages/org-admin/org-logs-perm-audit.js:153
 msgid "Anonymous User"
-msgstr "Nutzer/in anonym"
+msgstr "Benutzer/in anonym"
 
 #: frontend/src/components/shared-repo-list-view/shared-repo-list-item.js:206
 #: frontend/src/pages/groups/group-view.js:435
@@ -4674,7 +4674,7 @@ msgstr "Möchten Sie das Passwort für {placeholder} wirklich zurücksetzen?"
 msgid ""
 "{userCount} user(s) and {repoCount} libraries of this organization will also"
 " be deleted."
-msgstr ""
+msgstr "{userCount} Benutzer/innen und {repoCount} Bibliotheken dieser Organisation werden hiermit ebenfalls gelöscht."
 
 #: frontend/src/pages/sys-admin/orgs/orgs-content.js:163
 msgid "Delete Organization"
@@ -4984,7 +4984,7 @@ msgid ""
 "download/upload files if this is not set correctly. If you config Seafile "
 "behind Nginx/Apache, it should be SERVICE_URL/seafhttp, like "
 "https://seafile.example.com/seafhttp ."
-msgstr "Interne URL für das Hoch- und Herunterladen von Dateien. Die URL muss korrekt sein, sonst können Nutzerinnen und Nutzer keine Dateien hoch- oder herunterladen. Wenn Sie Seafile hinter Nginx/Apache konfigurieren, sollte es nach diesem Muster sein: SERVICE_URL/seafhttp, z.B. https://seafile.example.com/seafhttp"
+msgstr "Interne URL für das Hoch- und Herunterladen von Dateien. Die URL muss korrekt sein, sonst können Benutzer/innen keine Dateien hoch- oder herunterladen. Wenn Sie Seafile hinter Nginx/Apache konfigurieren, sollte es nach diesem Muster sein: SERVICE_URL/seafhttp, z.B. https://seafile.example.com/seafhttp"
 
 #: frontend/src/pages/sys-admin/web-settings/web-settings.js:121
 msgid "Branding"
