--- a/locale/es_MX/LC_MESSAGES/djangojs.po
+++ b/locale/es_MX/LC_MESSAGES/djangojs.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: seahub\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-03-26 10:14+0800\n"
-"PO-Revision-Date: 2020-03-26 02:18+0000\n"
-"Last-Translator: imwhatiam <imwhatiam123@gmail.com>\n"
+"PO-Revision-Date: 2020-03-27 00:50+0000\n"
+"Last-Translator: Rodolfo Cossalter <rcoss@dm.uba.ar>\n"
 "Language-Team: Spanish (Mexico) (http://www.transifex.com/haiwen/seahub/language/es_MX/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4661,7 +4661,7 @@ msgstr "¿Está seguro que desea restablecer la contraseña de {placeholder} ?"
 msgid ""
 "{userCount} user(s) and {repoCount} libraries of this organization will also"
 " be deleted."
-msgstr ""
+msgstr "{userCount} usuario(s) y {repoCount} bibliotecas de esta organización también serán eliminados."
 
 #: frontend/src/pages/sys-admin/orgs/orgs-content.js:163
 msgid "Delete Organization"
