--- a/media/locales/fr/seafile-editor.json
+++ b/media/locales/fr/seafile-editor.json
@@ -14,6 +14,7 @@
   "unordered_list": "Enumeration",
   "check_list_item": "Case à chocher",
   "insert_image": "Image",
+  "insert_file": "Insert File",
   "code": "Ligne de code",
   "code_block": "Bloc de code",
   "insert_link": "Lien",
@@ -32,6 +33,14 @@
   "remove_table": "Supprimer le tableau",
   "column": "Colonne",
   "row": "ligne",
+  "Insert_Row_Before": "Insert Row Before",
+  "Insert_Row_After": "Insert Row After",
+  "Insert_Column_Before": "Insert Column Before",
+  "Insert_Column_After": "Insert Column After",
+  "Remove_Row": "Remove Row",
+  "Remove_Column": "Remove Column",
+  "Insert_Row": "Insert Row",
+  "Insert_Column": "Insert Column",
   "set_align": "Ajuster l'alignement",
   "left": "Gauche",
   "center": "Centrer",
@@ -45,16 +54,16 @@
   "copy": "Copier",
   "copied": "Copié",
   "internal_link": "Afficher le lien interne",
-  "copy_internal_link": "Le lien interne a été copié dans le presse-papier",
+  "copy_internal_link": "Le lien interne a été copié dans le presse-papiers.",
   "internal_link_desc": "Un lien interne est un lien vers un fichier ou un dossier accessible en lecture par un utilisateur.",
   "share": "Partager",
-  "share_link": "Lien de partage",
+  "share_link": "Lien de téléchargement",
   "generate": "Générer",
-  "add_password_protection": "Ajouter un mot de passe de protection",
+  "add_password_protection": "Ajouter un mot de passe",
   "password": "Mot de passe",
   "at_least_8_characters": "Au moins 8 caractères",
   "password_again": "Mot de passe (à nouveau)",
-  "add_auto_expiration": "Ajouter l'expiration automatique",
+  "add_auto_expiration": "Ajouter une date d'expiration",
   "days": "jours",
   "please_enter_password": "Entrez un mot de passe",
   "greater_than_or_equal_to": "Plus grand ou égale à",
@@ -88,7 +97,7 @@
   "comments": "Commentaires",
   "add_a_comment": "Ajouter un commentaire",
   "no_comment_yet": "Aucun commentaire disponible",
-  "mark_as_resolved": "Marqué comme résolu",
+  "Mark_as_Resolved": "Mark as Resolved",
   "ask_for_review": "Demande d'un avis",
   "review_already_exists": "Un avis existe déjà",
   "view_review": "Voir l'avis",
@@ -101,18 +110,41 @@
   "related_files": "Fichiers relatifs",
   "related_file": "Fichier relatif",
   "no_tags": "Pas de tag",
+  "Date": "Date",
+  "Participants": "Participants",
+  "Meeting_note": "Meeting note",
+  "Chooser_document_type": "Chooser document type",
+  "Empty": "Vide",
   "no_related_files": "Aucun fichier relatif",
   "no_out_line": "Pas de contour",
-  "Please_use_Chrome_to_get_best_editing_experience": "Veuillez utiliser Chrome pour la meilleure expérience d'édition.",
+  "Editing_files_in_this_browser_can_lead_to_slight_display_problems": "Editing files in this browser can lead to slight display problems.",
   "no_document_improvement_suggestion": "Aucune proposition pour améliorer le document",
+  "Hide_side_panel": "Hide side panel",
+  "Show_side_panel": "Show side panel",
+  "Show_resolved_comments": "Voir les commentaires pris en compte",
+  "Update": "Mettre à jour",
+  "Width": "Width",
+  "Height": "Height",
+  "Full_screen": "Full screen",
+  "Insert_library_image": "Insert library image",
+  "Size": "Taille",
+  "Location": "Emplacement",
+  "Last_Update": "Mise à jour",
+  "Tags": "Tags",
+  "Related_Files": "Fichiers relatifs",
+  "Add_participants": "Ajouter des participants",
   "markdownLint": {
     "missing_h1": {
       "description": "Il n'y a pas de h1 dans le document",
       "issue" : "h1 manquant"
     },
     "heading_end_with_colon": {
-      "description": "La ponctuation qui suit l'en-tête ne devrait pas être une colonne.",
+      "description": "Trailing punctuation in heading should not be a colon",
       "issue": "Fin du titre largeur de colonne"
+    },
+    "heading_increase_irregular": {
+      "description": "Heading levels should only increment by one level at a time",
+      "issue": "Heading level issue"
     }
   },
   "userHelp": {
