--- a/media/locales/ru/seafile-editor.json
+++ b/media/locales/ru/seafile-editor.json
@@ -14,6 +14,7 @@
   "unordered_list": "Маркированный список",
   "check_list_item": "Проверка элемента списка",
   "insert_image": "Вставить изображение",
+  "insert_file": "Insert File",
   "code": "Встроенный код",
   "code_block": "Блок кода",
   "insert_link": "Вставить ссылку",
@@ -32,6 +33,14 @@
   "remove_table": "Удалить таблицу",
   "column": "Столбец",
   "row": "Строка",
+  "Insert_Row_Before": "Insert Row Before",
+  "Insert_Row_After": "Insert Row After",
+  "Insert_Column_Before": "Insert Column Before",
+  "Insert_Column_After": "Insert Column After",
+  "Remove_Row": "Remove Row",
+  "Remove_Column": "Remove Column",
+  "Insert_Row": "Insert Row",
+  "Insert_Column": "Insert Column",
   "set_align": "Установить выравнивание",
   "left": "Слева",
   "center": "По центру",
@@ -88,7 +97,7 @@
   "comments": "Комментарии",
   "add_a_comment": "Добавить комментарий...",
   "no_comment_yet": "Комментариев пока нет.",
-  "mark_as_resolved": "Отметить как разрешенный",
+  "Mark_as_Resolved": "Mark as Resolved",
   "ask_for_review": "Спросить отзыв",
   "review_already_exists": "Отзыв уже существует",
   "view_review": "Просмотр отзыва",
@@ -101,18 +110,41 @@
   "related_files": "связанные файлы",
   "related_file": "связанный файл",
   "no_tags": "Нет тегов",
+  "Date": "Дата",
+  "Participants": "Участники",
+  "Meeting_note": "Meeting note",
+  "Chooser_document_type": "Chooser document type",
+  "Empty": "Пусто",
   "no_related_files": "Нет связанных файлов",
   "no_out_line": "Нет контура",
-  "Please_use_Chrome_to_get_best_editing_experience": "Пожалуйста, используйте Chrome, чтобы получить лучший опыт редактирования.",
+  "Editing_files_in_this_browser_can_lead_to_slight_display_problems": "Editing files in this browser can lead to slight display problems.",
   "no_document_improvement_suggestion": "Нет предложений по улучшению документа",
+  "Hide_side_panel": "Hide side panel",
+  "Show_side_panel": "Show side panel",
+  "Show_resolved_comments": "Показать разрешенные комментарии",
+  "Update": "Изменить",
+  "Width": "Width",
+  "Height": "Height",
+  "Full_screen": "Full screen",
+  "Insert_library_image": "Insert library image",
+  "Size": "Размер",
+  "Location": "Местонахождение",
+  "Last_Update": "Последнее обновление",
+  "Tags": "Теги",
+  "Related_Files": "Связанные файлы",
+  "Add_participants": "Добавить участников",
   "markdownLint": {
     "missing_h1": {
       "description": "В документе нет h1",
       "issue" : "Отсутствует h1"
     },
     "heading_end_with_colon": {
-      "description": "Завершающая пунктуация в заголовке не должна быть двоеточием.",
+      "description": "Trailing punctuation in heading should not be a colon",
       "issue": "Заголовок заканчивается двоеточием"
+    },
+    "heading_increase_irregular": {
+      "description": "Heading levels should only increment by one level at a time",
+      "issue": "Heading level issue"
     }
   },
   "userHelp": {
