--- a/media/locales/es/seafile-editor.json
+++ b/media/locales/es/seafile-editor.json
@@ -14,6 +14,7 @@
   "unordered_list": "Lista Desordenada",
   "check_list_item": "Check List Item",
   "insert_image": "Insertar Imagen",
+  "insert_file": "Insertar Archivo",
   "code": "Inline Code",
   "code_block": "Bloque de Código",
   "insert_link": "Insertar Enlace",
@@ -32,6 +33,14 @@
   "remove_table": "Eliminar tabla",
   "column": "Columna",
   "row": "Fila",
+  "Insert_Row_Before": "Insertar Línea Antes",
+  "Insert_Row_After": "Insertar Línea Después",
+  "Insert_Column_Before": "Insertar Columna Antes",
+  "Insert_Column_After": "Insertar Columna Después",
+  "Remove_Row": "Eliminar Fila",
+  "Remove_Column": "Eliminar Columna",
+  "Insert_Row": "Insertar Fila",
+  "Insert_Column": "Insertar Columna",
   "set_align": "Establecer alineación",
   "left": "Izquierda",
   "center": "Centrar",
@@ -88,7 +97,7 @@
   "comments": "Comentarios",
   "add_a_comment": "Agregar un comentario...",
   "no_comment_yet": "No hay comentarios.",
-  "mark_as_resolved": "Marcar como resuelto",
+  "Mark_as_Resolved": "Marcar como Resuelto",
   "ask_for_review": "Solicitar revisión",
   "review_already_exists": "La revisión ya existe",
   "view_review": "Ver revisión",
@@ -101,18 +110,41 @@
   "related_files": "archivos relacionados",
   "related_file": "archivo relacionado",
   "no_tags": "Sin etiquetas",
+  "Date": "Fecha",
+  "Participants": "Participantes",
+  "Meeting_note": "Nota de la reunión",
+  "Chooser_document_type": "Elija el tipo de documento",
+  "Empty": "Vacío",
   "no_related_files": "Sin archivos relacionados",
   "no_out_line": "No hay esquema",
-  "Please_use_Chrome_to_get_best_editing_experience": "Por favor utilice Chrome para obtener la mejor experiencia editando.",
+  "Editing_files_in_this_browser_can_lead_to_slight_display_problems": "Editar archivos en este navegador puede producir algunos problemas en el display.",
   "no_document_improvement_suggestion": "No hay sugerencias para mejorar el documento",
+  "Hide_side_panel": "Ocultar panel lateral",
+  "Show_side_panel": "Mostrar panel lateral",
+  "Show_resolved_comments": "Mostrar comentarios resueltos",
+  "Update": "Actualizar",
+  "Width": "Ancho",
+  "Height": "Alto",
+  "Full_screen": "Pantalla completa",
+  "Insert_library_image": "Insertar imagen desde la biblioteca",
+  "Size": "Tamaño",
+  "Location": "Ubicación",
+  "Last_Update": "Última actualización",
+  "Tags": "Rótulos",
+  "Related_Files": "Archivos Relacionados",
+  "Add_participants": "Agregar participantes",
   "markdownLint": {
     "missing_h1": {
       "description": "No hay h1 en el documento",
       "issue" : "Falta h1"
     },
     "heading_end_with_colon": {
-      "description": "Un encabezado no debe finalizar con el signo Dos Puntos.",
+      "description": "Un encabezado no debe finalizar con el signo Dos Puntos",
       "issue": "El encabezado finaliza con el signo Dos Puntos"
+    },
+    "heading_increase_irregular": {
+      "description": "Los niveles del encabezado sólo deben incrementarse de a uno por vez",
+      "issue": "Problema con nivel de encabezado"
     }
   },
   "userHelp": {
