--- a/media/locales/ru/seafile-editor.json
+++ b/media/locales/ru/seafile-editor.json
@@ -14,6 +14,7 @@
   "unordered_list": "Маркированный список",
   "check_list_item": "Проверка элемента списка",
   "insert_image": "Вставить изображение",
+  "insert_file": "Вставить файл",
   "code": "Встроенный код",
   "code_block": "Блок кода",
   "insert_link": "Вставить ссылку",
@@ -32,6 +33,14 @@
   "remove_table": "Удалить таблицу",
   "column": "Столбец",
   "row": "Строка",
+  "Insert_Row_Before": "Вставить строку перед",
+  "Insert_Row_After": "Вставить строку после",
+  "Insert_Column_Before": "Вставить столбец перед",
+  "Insert_Column_After": "Вставить столбец после",
+  "Remove_Row": "Удалить строку",
+  "Remove_Column": "Удалить столбец",
+  "Insert_Row": "Вставить строку",
+  "Insert_Column": "Вставить столбец",
   "set_align": "Установить выравнивание",
   "left": "Слева",
   "center": "По центру",
@@ -88,7 +97,7 @@
   "comments": "Комментарии",
   "add_a_comment": "Добавить комментарий...",
   "no_comment_yet": "Комментариев пока нет.",
-  "mark_as_resolved": "Отметить как разрешенный",
+  "Mark_as_Resolved": "Отметить как решенный",
   "ask_for_review": "Спросить отзыв",
   "review_already_exists": "Отзыв уже существует",
   "view_review": "Просмотр отзыва",
@@ -101,18 +110,41 @@
   "related_files": "связанные файлы",
   "related_file": "связанный файл",
   "no_tags": "Нет тегов",
+  "Date": "Дата",
+  "Participants": "Участники",
+  "Meeting_note": "Заметка о встрече",
+  "Chooser_document_type": "Выбор типа документа",
+  "Empty": "Пусто",
   "no_related_files": "Нет связанных файлов",
   "no_out_line": "Нет контура",
-  "Please_use_Chrome_to_get_best_editing_experience": "Пожалуйста, используйте Chrome, чтобы получить лучший опыт редактирования.",
+  "Editing_files_in_this_browser_can_lead_to_slight_display_problems": "Изменение файлов в этом браузере может привести к небольшим проблемам с отображением.",
   "no_document_improvement_suggestion": "Нет предложений по улучшению документа",
+  "Hide_side_panel": "Скрыть боковую панель",
+  "Show_side_panel": "Показать боковую панель",
+  "Show_resolved_comments": "Показать разрешенные комментарии",
+  "Update": "Изменить",
+  "Width": "Ширина",
+  "Height": "Высота",
+  "Full_screen": "Полный экран",
+  "Insert_library_image": "Вставить изображение библиотеки",
+  "Size": "Размер",
+  "Location": "Местонахождение",
+  "Last_Update": "Последнее обновление",
+  "Tags": "Теги",
+  "Related_Files": "Связанные файлы",
+  "Add_participants": "Добавить участников",
   "markdownLint": {
     "missing_h1": {
       "description": "В документе нет h1",
       "issue" : "Отсутствует h1"
     },
     "heading_end_with_colon": {
-      "description": "Завершающая пунктуация в заголовке не должна быть двоеточием.",
+      "description": "Завершающая пунктуация в заголовке не должна быть двоеточием",
       "issue": "Заголовок заканчивается двоеточием"
+    },
+    "heading_increase_irregular": {
+      "description": "Уровни заголовков должны увеличиваться только на один уровень за раз",
+      "issue": "Проблема уровня заголовка"
     }
   },
   "userHelp": {
