--- a/locale/pl/LC_MESSAGES/djangojs.po
+++ b/locale/pl/LC_MESSAGES/djangojs.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: seahub\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-03-26 10:14+0800\n"
-"PO-Revision-Date: 2020-03-26 02:18+0000\n"
-"Last-Translator: imwhatiam <imwhatiam123@gmail.com>\n"
+"PO-Revision-Date: 2020-04-03 11:09+0000\n"
+"Last-Translator: Ryszard Trojnacki <ryszard.trojnacki@gmail.com>\n"
 "Language-Team: Polish (http://www.transifex.com/haiwen/seahub/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1534,7 +1534,7 @@ msgstr ""
 
 #: frontend/src/components/dialog/list-related-file-dialog.js:84
 msgid "Library Name"
-msgstr ""
+msgstr "Nazwa biblioteki"
 
 #: frontend/src/components/dialog/list-related-file-dialog.js:85
 #: frontend/src/components/dialog/list-taggedfiles-dialog.js:80
@@ -2536,7 +2536,7 @@ msgstr ""
 
 #: frontend/src/components/file-uploader/file-uploader.js:394
 msgid "Network error"
-msgstr ""
+msgstr "Błąd sieci"
 
 #: frontend/src/components/file-uploader/file-uploader.js:401
 msgid "File is locked by others."
@@ -3213,7 +3213,7 @@ msgstr "Hasło:"
 
 #: frontend/src/components/user-settings/webdav-password.js:64
 msgid "Set Password"
-msgstr ""
+msgstr "Ustaw hasło"
 
 #: frontend/src/components/wiki-markdown-viewer.js:219
 msgid "related files"
@@ -3314,7 +3314,7 @@ msgstr "Utworzona biblioteka"
 
 #: frontend/src/pages/dashboard/files-activities.js:113
 msgid "Renamed library"
-msgstr ""
+msgstr "Zmieniono nazwę biblioteki"
 
 #: frontend/src/pages/dashboard/files-activities.js:117
 msgid "Deleted library"
@@ -3322,7 +3322,7 @@ msgstr "Usunięta biblioteka"
 
 #: frontend/src/pages/dashboard/files-activities.js:121
 msgid "Restored library"
-msgstr ""
+msgstr "Przywrócono bibliotekę"
 
 #: frontend/src/pages/dashboard/files-activities.js:125
 msgid "Cleaned trash"
@@ -3354,7 +3354,7 @@ msgstr ""
 
 #: frontend/src/pages/dashboard/files-activities.js:171
 msgid "Created file"
-msgstr ""
+msgstr "Plik utworzono"
 
 #: frontend/src/pages/dashboard/files-activities.js:176
 msgid "Deleted draft"
@@ -3362,19 +3362,19 @@ msgstr ""
 
 #: frontend/src/pages/dashboard/files-activities.js:176
 msgid "Deleted file"
-msgstr ""
+msgstr "Plik usunięto"
 
 #: frontend/src/pages/dashboard/files-activities.js:181
 msgid "Restored file"
-msgstr ""
+msgstr "Plik odtworzono"
 
 #: frontend/src/pages/dashboard/files-activities.js:186
 msgid "Renamed file"
-msgstr ""
+msgstr "Zmieniono nazwę pliku"
 
 #: frontend/src/pages/dashboard/files-activities.js:192
 msgid "Moved file"
-msgstr ""
+msgstr "Plik przeniesiono"
 
 #: frontend/src/pages/dashboard/files-activities.js:197
 msgid "Updated draft"
@@ -3382,27 +3382,27 @@ msgstr ""
 
 #: frontend/src/pages/dashboard/files-activities.js:197
 msgid "Updated file"
-msgstr ""
+msgstr "Zaktualizowano plik"
 
 #: frontend/src/pages/dashboard/files-activities.js:207
 msgid "Created folder"
-msgstr ""
+msgstr "Utworzono folder"
 
 #: frontend/src/pages/dashboard/files-activities.js:212
 msgid "Deleted folder"
-msgstr ""
+msgstr "Folder usunięty"
 
 #: frontend/src/pages/dashboard/files-activities.js:217
 msgid "Restored folder"
-msgstr ""
+msgstr "Folder odtworzony"
 
 #: frontend/src/pages/dashboard/files-activities.js:222
 msgid "Renamed folder"
-msgstr ""
+msgstr "Zmieniono nazwę folderu"
 
 #: frontend/src/pages/dashboard/files-activities.js:228
 msgid "Moved folder"
-msgstr ""
+msgstr "Folder przeniesiono"
 
 #: frontend/src/pages/drafts/draft-content.js:44
 msgid "Successfully published draft %(draft)s."
@@ -3712,7 +3712,7 @@ msgstr "Czas usunięcia"
 #: frontend/src/pages/sys-admin/repos/trash-repos.js:157
 #: frontend/src/repo-snapshot.js:119
 msgid "Successfully restored the library."
-msgstr ""
+msgstr "Poprawnie odtworzono bibliotekę."
 
 #: frontend/src/pages/my-libs/my-libs-deleted.js:150
 #: frontend/src/pages/my-libs/mylib-repo-list-item.js:227
