--- a/media/locales/fr/seafile-editor.json
+++ b/media/locales/fr/seafile-editor.json
@@ -14,7 +14,7 @@
   "unordered_list": "Enumeration",
   "check_list_item": "Case à chocher",
   "insert_image": "Image",
-  "insert_file": "Insert File",
+  "insert_file": "Fichier",
   "code": "Ligne de code",
   "code_block": "Bloc de code",
   "insert_link": "Lien",
@@ -33,19 +33,19 @@
   "remove_table": "Supprimer le tableau",
   "column": "Colonne",
   "row": "ligne",
-  "Insert_Row_Before": "Insert Row Before",
-  "Insert_Row_After": "Insert Row After",
-  "Insert_Column_Before": "Insert Column Before",
-  "Insert_Column_After": "Insert Column After",
-  "Remove_Row": "Remove Row",
-  "Remove_Column": "Remove Column",
-  "Insert_Row": "Insert Row",
-  "Insert_Column": "Insert Column",
+  "Insert_Row_Before": "Insérer au-dessus",
+  "Insert_Row_After": "Insérer en-dessous",
+  "Insert_Column_Before": "Insérer à gauche",
+  "Insert_Column_After": "Insérer à droite",
+  "Remove_Row": "Supprimer la ligne",
+  "Remove_Column": "Supprimer la colonne",
+  "Insert_Row": "Insérer une ligne",
+  "Insert_Column": "Insérer une colonne",
   "set_align": "Ajuster l'alignement",
   "left": "Gauche",
   "center": "Centrer",
   "right": "Droite",
-  "file_saved": "Fichier a été sauvegardé.",
+  "file_saved": "Le fichier a été sauvegardé.",
   "file_failed_to_save": "Échec de la sauvegarde du fichier",
   "star": "Ajouter à favoris",
   "unstar": "Enlever des favoris",
@@ -75,7 +75,7 @@
   "please_enter_a_non-negative_integer": "Veuillez introduire un intégrateur non-négatif",
   "please_enter_days": "Veuillez entrer un nombre de jours",
   "password_is_too_short": "Le mot de passe est trop court",
-  "passwords_do_not_match": "Les mots de passe ne correspondent pas",
+  "passwords_do_not_match": "Les mots de passe ne correspondent pas.",
   "return_to_wiki_page": "Retour à la page du Wiki",
   "insert_network_image": "Insérer une image du réseau",
   "upload_local_image": "Insérer une image locale",
@@ -97,7 +97,7 @@
   "comments": "Commentaires",
   "add_a_comment": "Ajouter un commentaire",
   "no_comment_yet": "Aucun commentaire disponible",
-  "Mark_as_Resolved": "Mark as Resolved",
+  "Mark_as_Resolved": "Marquer com pris en compte",
   "ask_for_review": "Demande d'un avis",
   "review_already_exists": "Un avis existe déjà",
   "view_review": "Voir l'avis",
@@ -112,21 +112,21 @@
   "no_tags": "Pas de tag",
   "Date": "Date",
   "Participants": "Participants",
-  "Meeting_note": "Meeting note",
-  "Chooser_document_type": "Chooser document type",
+  "Meeting_note": "Note de réunion",
+  "Chooser_document_type": "Choisir un type de document",
   "Empty": "Vide",
   "no_related_files": "Aucun fichier relatif",
   "no_out_line": "Pas de contour",
-  "Editing_files_in_this_browser_can_lead_to_slight_display_problems": "Editing files in this browser can lead to slight display problems.",
+  "Editing_files_in_this_browser_can_lead_to_slight_display_problems": "L'édition de fichiers dans ce navigateur peut entraîner de légers problèmes d'affichage.",
   "no_document_improvement_suggestion": "Aucune proposition pour améliorer le document",
-  "Hide_side_panel": "Hide side panel",
-  "Show_side_panel": "Show side panel",
+  "Hide_side_panel": "Fermer",
+  "Show_side_panel": "Afficher détails",
   "Show_resolved_comments": "Voir les commentaires pris en compte",
   "Update": "Mettre à jour",
-  "Width": "Width",
-  "Height": "Height",
-  "Full_screen": "Full screen",
-  "Insert_library_image": "Insert library image",
+  "Width": "Largeur",
+  "Height": "Hauteur",
+  "Full_screen": "Plein écran",
+  "Insert_library_image": "Insérer une image d‘une bibliothèque",
   "Size": "Taille",
   "Location": "Emplacement",
   "Last_Update": "Mise à jour",
@@ -139,12 +139,12 @@
       "issue" : "h1 manquant"
     },
     "heading_end_with_colon": {
-      "description": "Trailing punctuation in heading should not be a colon",
+      "description": "La ponctuation de fin de titre ne doit pas être deux points",
       "issue": "Fin du titre largeur de colonne"
     },
     "heading_increase_irregular": {
-      "description": "Heading levels should only increment by one level at a time",
-      "issue": "Heading level issue"
+      "description": "Le niveau des titres ne doit être augmenté que d'un niveau à la fois.",
+      "issue": "Problème niveau de titre"
     }
   },
   "userHelp": {
