--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -77,8 +77,8 @@ msgstr ""
 "Project-Id-Version: seahub\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-07 13:02+0800\n"
-"PO-Revision-Date: 2020-05-07 05:02+0000\n"
-"Last-Translator: imwhatiam <imwhatiam123@gmail.com>\n"
+"PO-Revision-Date: 2020-05-07 10:55+0000\n"
+"Last-Translator: Andreas Vollmer | HU Berlin <andreas.vollmer@cms.hu-berlin.de>\n"
 "Language-Team: German (http://www.transifex.com/haiwen/seahub/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -198,7 +198,7 @@ msgstr "Bibliotheken können nicht auf ihre Eigentümer/innen übertragen werden
 #: seahub/api2/endpoints/repo_share_links.py:140
 #: seahub/api2/endpoints/share_links.py:473
 msgid "There is an associated published library."
-msgstr ""
+msgstr "Es gibt eine veröffentlichte Bibliothek hierzu."
 
 #: seahub/api2/endpoints/admin/shares.py:183
 #, python-format
@@ -336,7 +336,7 @@ msgstr "Speicherplatz"
 #: seahub/api2/endpoints/admin/users.py:422
 #: seahub/api2/endpoints/admin/users.py:447
 msgid "There are more than 500 users, and sort is not offered."
-msgstr ""
+msgstr "Es gibt über 500 Benutzer/innen, eine Sortierung ist nicht möglich."
 
 #: seahub/api2/endpoints/admin/users.py:510 seahub/base/accounts.py:781
 #: seahub/forms.py:30
@@ -495,7 +495,7 @@ msgstr "Sie können die Sperrung der Datei nicht erneuern."
 
 #: seahub/api2/endpoints/file_participants.py:120
 msgid "The participant already exists."
-msgstr ""
+msgstr "Benutzer/in ist schon vorhanden."
 
 #: seahub/api2/endpoints/file_participants.py:129
 #: seahub/api2/endpoints/file_tag.py:175
