--- a/locale/sv/LC_MESSAGES/django.po
+++ b/locale/sv/LC_MESSAGES/django.po
@@ -13,8 +13,8 @@ msgstr ""
 "Project-Id-Version: seahub\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-07 13:02+0800\n"
-"PO-Revision-Date: 2020-05-07 05:02+0000\n"
-"Last-Translator: imwhatiam <imwhatiam123@gmail.com>\n"
+"PO-Revision-Date: 2020-05-18 14:29+0000\n"
+"Last-Translator: Radapompa <radapompa@gmail.com>\n"
 "Language-Team: Swedish (http://www.transifex.com/haiwen/seahub/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -134,7 +134,7 @@ msgstr "Katalogen kan inte överföras till ägaren."
 #: seahub/api2/endpoints/repo_share_links.py:140
 #: seahub/api2/endpoints/share_links.py:473
 msgid "There is an associated published library."
-msgstr ""
+msgstr "Det finns en associerad publicerad katalog."
 
 #: seahub/api2/endpoints/admin/shares.py:183
 #, python-format
@@ -272,7 +272,7 @@ msgstr "Utrymmeskvot"
 #: seahub/api2/endpoints/admin/users.py:422
 #: seahub/api2/endpoints/admin/users.py:447
 msgid "There are more than 500 users, and sort is not offered."
-msgstr ""
+msgstr "Det finns mer än 500 användare och kan därmed inte sortera."
 
 #: seahub/api2/endpoints/admin/users.py:510 seahub/base/accounts.py:781
 #: seahub/forms.py:30
@@ -431,7 +431,7 @@ msgstr "Du kan inte uppdatera denna fillåsning."
 
 #: seahub/api2/endpoints/file_participants.py:120
 msgid "The participant already exists."
-msgstr ""
+msgstr "Deltagaren existerar redan."
 
 #: seahub/api2/endpoints/file_participants.py:129
 #: seahub/api2/endpoints/file_tag.py:175
