added translation with transifex

--- a/media/locales/cs/seafile-editor.json
+++ b/media/locales/cs/seafile-editor.json
@@ -14,7 +14,7 @@
   "unordered_list": "Nečíslovaný seznam",
   "check_list_item": "Zkontrolovat položku seznamu",
   "insert_image": "Vložit obrázek",
-  "insert_file": "Insert File",
+  "insert_file": "Vložit soubor",
   "code": "Řádkový kód",
   "code_block": "Blok kódu",
   "insert_link": "Vložit odkaz",
@@ -33,14 +33,14 @@
   "remove_table": "Odebrat tabulku",
   "column": "Sloupec",
   "row": "Řádek",
-  "Insert_Row_Before": "Insert Row Before",
-  "Insert_Row_After": "Insert Row After",
-  "Insert_Column_Before": "Insert Column Before",
-  "Insert_Column_After": "Insert Column After",
-  "Remove_Row": "Remove Row",
-  "Remove_Column": "Remove Column",
-  "Insert_Row": "Insert Row",
-  "Insert_Column": "Insert Column",
+  "Insert_Row_Before": "Vložit řádku před",
+  "Insert_Row_After": "Vložit řádek za",
+  "Insert_Column_Before": "Vložit sloupec před",
+  "Insert_Column_After": "Vložit sloupec za",
+  "Remove_Row": "Odstranit řádek",
+  "Remove_Column": "Odstranit sloupec",
+  "Insert_Row": "Vložit řádek",
+  "Insert_Column": "Vložit sloupec",
   "set_align": "Nastavit zarovnání",
   "left": "Vlevo",
   "center": "Střed",
@@ -97,7 +97,7 @@
   "comments": "Komentáře",
   "add_a_comment": "Přidat komentář…",
   "no_comment_yet": "Žádné komentáře",
-  "Mark_as_Resolved": "Mark as Resolved",
+  "Mark_as_Resolved": "Označit jako vyřešené",
   "ask_for_review": "Požádat o kontrolu",
   "review_already_exists": "Kontrola již existuje. ",
   "view_review": "Zobrazit kontrolu",
@@ -111,40 +111,40 @@
   "related_file": "související soubor",
   "no_tags": "Žádné značky",
   "Date": "Datum",
-  "Participants": "Participants",
-  "Meeting_note": "Meeting note",
-  "Chooser_document_type": "Chooser document type",
+  "Participants": "Účastníci",
+  "Meeting_note": "Poznámky ze schůzky",
+  "Chooser_document_type": "Výběr typu dokumentu",
   "Empty": "Prázdný",
   "no_related_files": "Žádné související soubory",
   "no_out_line": "Bez obrysu",
-  "Editing_files_in_this_browser_can_lead_to_slight_display_problems": "Editing files in this browser can lead to slight display problems.",
+  "Editing_files_in_this_browser_can_lead_to_slight_display_problems": "Úpravy souborů v tomto prohlížeči mohou způsobit malé problémy se zobrazením.",
   "no_document_improvement_suggestion": "Žádný návrh na zlepšení dokumentu",
-  "Hide_side_panel": "Hide side panel",
-  "Show_side_panel": "Show side panel",
+  "Hide_side_panel": "Skrýt postranní panel",
+  "Show_side_panel": "Zobrazit postranní panel",
   "Show_resolved_comments": "Zobrazit vyřešené komentáře",
   "Update": "Aktualizovat",
-  "Width": "Width",
-  "Height": "Height",
-  "Full_screen": "Full screen",
-  "Insert_library_image": "Insert library image",
+  "Width": "Šířka",
+  "Height": "Výška",
+  "Full_screen": "Celá obrazovka",
+  "Insert_library_image": "Vložit obrázek knihovny",
   "Size": "Velikost",
   "Location": "Umístění",
   "Last_Update": "Poslední aktualizace",
   "Tags": "Štítky",
   "Related_Files": "Související soubory",
-  "Add_participants": "Add participants",
+  "Add_participants": "Přidat účastníky",
   "markdownLint": {
     "missing_h1": {
       "description": "V dokumentu není žádný h1",
       "issue" : "Chybí h1"
     },
     "heading_end_with_colon": {
-      "description": "Trailing punctuation in heading should not be a colon",
+      "description": "Koncová interpunkce v záhlaví by neměla být dvojtečka",
       "issue": "Záhlaví končí dvojtečkou"
     },
     "heading_increase_irregular": {
-      "description": "Heading levels should only increment by one level at a time",
-      "issue": "Heading level issue"
+      "description": "Úrovně nadpisů by se měly zvyšovat vždy pouze o jednu úroveň",
+      "issue": "Problém s úrovní nadpisu"
     }
   },
   "userHelp": {
