--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -77,8 +77,8 @@ msgstr ""
 "Project-Id-Version: seahub\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-07-27 12:02+0800\n"
-"PO-Revision-Date: 2020-07-27 04:02+0000\n"
-"Last-Translator: imwhatiam <imwhatiam123@gmail.com>\n"
+"PO-Revision-Date: 2020-07-27 09:47+0000\n"
+"Last-Translator: Andreas Vollmer | HU Berlin <andreas.vollmer@cms.hu-berlin.de>\n"
 "Language-Team: German (http://www.transifex.com/haiwen/seahub/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -708,13 +708,13 @@ msgstr "Der Freigabe-Link sollte höchstens %s Tage verfügbar sein"
 #: seahub/api2/endpoints/upload_links.py:209
 #, python-format
 msgid "Expiration time should be later than %s."
-msgstr ""
+msgstr "Die Ablaufzeit sollte nach %s liegen."
 
 #: seahub/api2/endpoints/share_links.py:306
 #: seahub/api2/endpoints/upload_links.py:218
 #, python-format
 msgid "Expiration time should be earlier than %s."
-msgstr ""
+msgstr "Die Ablaufzeit sollte vor %s liegen."
 
 #: seahub/api2/endpoints/share_links.py:369
 #: seahub/api2/endpoints/share_links.py:378
@@ -983,7 +983,7 @@ msgstr "Dateien in dieser Bibliothek können nicht in der Web-Vorschau angezeigt
 #: seahub/base/management/commands/check_user_quota.py:58
 #, python-format
 msgid "Your quota is almost full on %s"
-msgstr ""
+msgstr "Ihr Speicherplatz auf %s ist fast ganz verbraucht"
 
 #: seahub/base/management/commands/createsuperuser.py:26
 msgid "Enter a valid e-mail address."
@@ -2268,7 +2268,7 @@ msgstr "Neue Mitteilungen auf %s"
 #: seahub/notifications/management/commands/send_notices_to_social_account.py:223
 #, python-format
 msgid "You've got %(num)s new notices on %(site_name)s:\n"
-msgstr ""
+msgstr "Auf %(site_name)s gibt es %(num)s neue Mitteilungen für Sie:\n"
 
 #: seahub/notifications/models.py:483
 #, python-format
@@ -3346,7 +3346,7 @@ msgstr "Benutzer/in hat sich leider noch nicht registriert."
 #: seahub/templates/user_quota_full.html:12
 #, python-format
 msgid "Your quota is almost full on %(site_name)s."
-msgstr ""
+msgstr "Ihr Speicherplatz auf %(site_name)s ist fast ganz verbraucht."
 
 #: seahub/templates/user_quota_full.html:14
 msgid "Used:"
