--- a/locale/es_MX/LC_MESSAGES/djangojs.po
+++ b/locale/es_MX/LC_MESSAGES/djangojs.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: seahub\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-07-27 12:03+0800\n"
-"PO-Revision-Date: 2020-07-27 03:40+0000\n"
-"Last-Translator: imwhatiam <imwhatiam123@gmail.com>\n"
+"PO-Revision-Date: 2020-07-27 19:00+0000\n"
+"Last-Translator: Rodolfo Cossalter <rcoss@dm.uba.ar>\n"
 "Language-Team: Spanish (Mexico) (http://www.transifex.com/haiwen/seahub/language/es_MX/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1087,17 +1087,17 @@ msgstr "Agregar"
 #: frontend/src/components/dialog/generate-share-link.js:34
 #: frontend/src/components/dialog/generate-upload-link.js:31
 msgid "{minDays_placeholder} - {maxDays_placeholder} days"
-msgstr ""
+msgstr "{minDays_placeholder} - {maxDays_placeholder} días"
 
 #: frontend/src/components/dialog/generate-share-link.js:38
 #: frontend/src/components/dialog/generate-upload-link.js:35
 msgid "Greater than or equal to {minDays_placeholder} days"
-msgstr ""
+msgstr "Mayor o igual que {minDays_placeholder} días"
 
 #: frontend/src/components/dialog/generate-share-link.js:41
 #: frontend/src/components/dialog/generate-upload-link.js:38
 msgid "Less than or equal to {maxDays_placeholder} days"
-msgstr ""
+msgstr "Menor o igual que {maxDays_placeholder} días"
 
 #: frontend/src/components/dialog/generate-share-link.js:217
 msgid "Share link is copied to the clipboard."
@@ -1169,7 +1169,7 @@ msgstr "Agregar vencimiento automático"
 #: frontend/src/components/dialog/generate-share-link.js:481
 #: frontend/src/components/dialog/generate-upload-link.js:333
 msgid "Expiration days"
-msgstr ""
+msgstr "Días de vencimiento"
 
 #: frontend/src/components/dialog/generate-share-link.js:488
 #: frontend/src/components/dialog/generate-upload-link.js:340
@@ -1181,7 +1181,7 @@ msgstr "días"
 #: frontend/src/components/dialog/generate-share-link.js:500
 #: frontend/src/components/dialog/generate-upload-link.js:352
 msgid "Expiration time"
-msgstr ""
+msgstr "Tiempo de vencimiento"
 
 #: frontend/src/components/dialog/generate-share-link.js:517
 msgid "Set permission"
