--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -26,8 +26,8 @@ msgstr ""
 "Project-Id-Version: seahub\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-07-27 12:02+0800\n"
-"PO-Revision-Date: 2020-07-27 04:02+0000\n"
-"Last-Translator: imwhatiam <imwhatiam123@gmail.com>\n"
+"PO-Revision-Date: 2020-07-27 07:00+0000\n"
+"Last-Translator: Vladimir <pash.vld@gmail.com>\n"
 "Language-Team: Russian (http://www.transifex.com/haiwen/seahub/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -657,13 +657,13 @@ msgstr "Срок действия должен быть меньше или ра
 #: seahub/api2/endpoints/upload_links.py:209
 #, python-format
 msgid "Expiration time should be later than %s."
-msgstr ""
+msgstr "Время истечения должно быть позже, чем %s."
 
 #: seahub/api2/endpoints/share_links.py:306
 #: seahub/api2/endpoints/upload_links.py:218
 #, python-format
 msgid "Expiration time should be earlier than %s."
-msgstr ""
+msgstr "Время истечения должно быть раньше, чем %s."
 
 #: seahub/api2/endpoints/share_links.py:369
 #: seahub/api2/endpoints/share_links.py:378
@@ -932,7 +932,7 @@ msgstr "Файлы в данной библиотеке не могут быть
 #: seahub/base/management/commands/check_user_quota.py:58
 #, python-format
 msgid "Your quota is almost full on %s"
-msgstr ""
+msgstr "Ваша квота почти заполнена на %s"
 
 #: seahub/base/management/commands/createsuperuser.py:26
 msgid "Enter a valid e-mail address."
@@ -2227,7 +2227,7 @@ msgstr "Новое уведомление в %s"
 #: seahub/notifications/management/commands/send_notices_to_social_account.py:223
 #, python-format
 msgid "You've got %(num)s new notices on %(site_name)s:\n"
-msgstr ""
+msgstr "У вас %(num)s новых уведомлений на %(site_name)s:\n"
 
 #: seahub/notifications/models.py:483
 #, python-format
@@ -3309,7 +3309,7 @@ msgstr "К сожалению, этот пользователь не зарег
 #: seahub/templates/user_quota_full.html:12
 #, python-format
 msgid "Your quota is almost full on %(site_name)s."
-msgstr ""
+msgstr "Ваша квота почти заполнена на %(site_name)s."
 
 #: seahub/templates/user_quota_full.html:14
 msgid "Used:"
