--- a/locale/ru/LC_MESSAGES/djangojs.po
+++ b/locale/ru/LC_MESSAGES/djangojs.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: seahub\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-07-27 12:03+0800\n"
-"PO-Revision-Date: 2020-07-27 03:40+0000\n"
-"Last-Translator: imwhatiam <imwhatiam123@gmail.com>\n"
+"PO-Revision-Date: 2020-07-27 06:55+0000\n"
+"Last-Translator: Vladimir <pash.vld@gmail.com>\n"
 "Language-Team: Russian (http://www.transifex.com/haiwen/seahub/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1087,17 +1087,17 @@ msgstr "Добавить"
 #: frontend/src/components/dialog/generate-share-link.js:34
 #: frontend/src/components/dialog/generate-upload-link.js:31
 msgid "{minDays_placeholder} - {maxDays_placeholder} days"
-msgstr ""
+msgstr "{minDays_placeholder} - {maxDays_placeholder} дней"
 
 #: frontend/src/components/dialog/generate-share-link.js:38
 #: frontend/src/components/dialog/generate-upload-link.js:35
 msgid "Greater than or equal to {minDays_placeholder} days"
-msgstr ""
+msgstr "Больше или равно {minDays_placeholder} дней"
 
 #: frontend/src/components/dialog/generate-share-link.js:41
 #: frontend/src/components/dialog/generate-upload-link.js:38
 msgid "Less than or equal to {maxDays_placeholder} days"
-msgstr ""
+msgstr "Меньше или равно {maxDays_placeholder} дней"
 
 #: frontend/src/components/dialog/generate-share-link.js:217
 msgid "Share link is copied to the clipboard."
@@ -1169,7 +1169,7 @@ msgstr "Добавить авто истечение срока действия
 #: frontend/src/components/dialog/generate-share-link.js:481
 #: frontend/src/components/dialog/generate-upload-link.js:333
 msgid "Expiration days"
-msgstr ""
+msgstr "Дни истечения"
 
 #: frontend/src/components/dialog/generate-share-link.js:488
 #: frontend/src/components/dialog/generate-upload-link.js:340
@@ -1181,7 +1181,7 @@ msgstr "дней"
 #: frontend/src/components/dialog/generate-share-link.js:500
 #: frontend/src/components/dialog/generate-upload-link.js:352
 msgid "Expiration time"
-msgstr ""
+msgstr "Время истечения"
 
 #: frontend/src/components/dialog/generate-share-link.js:517
 msgid "Set permission"
