[l10n] updated .po files

--- a/media/locales/it/seafile-editor.json
+++ b/media/locales/it/seafile-editor.json
@@ -90,7 +90,7 @@
   "you_have_an_unsaved_draft_do_you_like_to_use_it": "Hai una bozza non salvata. La vuoi utilizzare?",
   "local_draft_saved": "Bozza salvata in locale",
   "new_draft": "Nuova Bozza",
-  "view_draft": "View Draft",
+  "view_draft": "Bozza",
   "publish": "Pubblica",
   "this_file_has_a_draft": "Questo file è una bozza", 
   "delete": "Elimina",
